--- a/index.html
+++ b/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@100;300;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@100;300;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Robert Stepanov Portfolio</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <section id="hero">
-        <div class="hero-text">
-            <img src="images/RS_logo.png" alt="">
-            <h1>Welcome to my Portfolio</h1>
-            <p>My name is Robert and I design and develop web pages.</p>
-            <div class="hero-btn">
-                <a href="#"><span></span>See my work</a>
-            </div>
+      <div class="hero-text">
+        <img src="images/RS_logo.png" alt="" />
+        <h1>Welcome to my Portfolio</h1>
+        <p>My name is Robert and I design and develop web pages.</p>
+        <div class="hero-btn">
+          <a href="#"><span></span>See my work</a>
         </div>
+      </div>
     </section>
-    
-</body>
+
+    <section id="about">
+      <div class="about-container">
+        <div class="about-title">
+          <h2>About Me</h2>
+        </div>
+        <div class="projects-container">
+          <img src="images/wl2site.PNG" alt="" />
+          <img src="images/techsite.PNG" alt="" />
+          <img src="images/api.PNG" alt="" />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
